[gd_scene load_steps=93 format=2]

[ext_resource path="res://src/entities/MeleeEnemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/goblin/goblin_left_stand.png" type="Texture" id=2]
[ext_resource path="res://sprites/goblin/goblin_up_stand.png" type="Texture" id=3]
[ext_resource path="res://sprites/goblin/goblin_down_stand.png" type="Texture" id=4]
[ext_resource path="res://sprites/goblin/goblin_down_walk.png" type="Texture" id=5]
[ext_resource path="res://sprites/goblin/goblin_right_stand.png" type="Texture" id=6]
[ext_resource path="res://sprites/goblin/goblin_up_slash.png" type="Texture" id=7]
[ext_resource path="res://sprites/goblin/goblin_down_slash.png" type="Texture" id=8]
[ext_resource path="res://sprites/goblin/goblin_right_walk.png" type="Texture" id=9]
[ext_resource path="res://sprites/goblin/goblin_right_slash.png" type="Texture" id=10]
[ext_resource path="res://sprites/goblin/goblin_left_walk.png" type="Texture" id=11]
[ext_resource path="res://sprites/goblin/goblin_left_slash.png" type="Texture" id=12]
[ext_resource path="res://sprites/goblin/goblin_up_walk.png" type="Texture" id=13]
[ext_resource path="res://sfx proto1/crit1.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx proto1/gobatk1.wav" type="AudioStream" id=15]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 8 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 12 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 12 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 12 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 12 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 12 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 12 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 13 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 13 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 13 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 13 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 13 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 13 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": false,
"name": "slash_down",
"speed": 20.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": false,
"name": "slash_left",
"speed": 20.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "slash_right",
"speed": 20.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "slash_up",
"speed": 20.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 7.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "walk_right",
"speed": 7.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "walk_up",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=74]
extents = Vector2( 11, 8 )

[sub_resource type="RectangleShape2D" id=75]
extents = Vector2( 7, 22 )

[sub_resource type="RectangleShape2D" id=76]
extents = Vector2( 11, 24 )

[sub_resource type="CapsuleShape2D" id=77]
radius = 49.5339
height = 151.276

[node name="Goblin" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 2
collision_mask = 2147483939
script = ExtResource( 1 )
speed = 50.0
attack_speed = 1.0
knockback_speed = 150.0
damage = 0.5
health = 3.0
slash_length = 7
attack_cooldown_length = 1.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 73 )
animation = "walk_up"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 74 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="HitboxPivot" type="Position2D" parent="."]

[node name="Hitbox" type="Area2D" parent="HitboxPivot"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxPivot/Hitbox"]
position = Vector2( 15, 1 )
shape = SubResource( 75 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 76 )

[node name="InvincibilityCooldown" type="Timer" parent="."]
one_shot = true

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Crit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="DetectionZonePivot" type="Position2D" parent="."]

[node name="DetectionZone" type="Area2D" parent="DetectionZonePivot"]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZonePivot/DetectionZone"]
position = Vector2( 52.086, 1 )
rotation = 1.5708
shape = SubResource( 77 )

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_shape_entered"]
[connection signal="timeout" from="InvincibilityCooldown" to="." method="_on_InvincibilityCooldown_timeout"]
